feat: add checkboxes furnitures filter in page catalog

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "choices.js": "^10.1.0",
     "graph-modal": "^1.0.4",
     "graph-tabs": "^1.0.0",
+    "gsap": "^3.11.1",
     "inputmask": "^5.0.7",
     "just-validate": "^3.3.3",
     "rellax": "^1.12.1",
