feat: add price filter in page catalog

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "gsap": "^3.11.1",
     "inputmask": "^5.0.7",
     "just-validate": "^3.3.3",
+    "nouislider": "^15.6.1",
     "rellax": "^1.12.1",
     "simplebar": "^5.3.6",
     "smooth-scroll": "^16.1.3",
