--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "just-validate": "^3.3.3",
     "nouislider": "^15.6.1",
     "rellax": "^1.12.1",
+    "scroll-lock": "^2.1.5",
     "simplebar": "^5.3.6",
     "smooth-scroll": "^16.1.3",
     "swiped-events": "^1.1.6",
