feat: add validaition checkbox in productBuyOneClick and add push deploy in gh-pages

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cache": "gulp cache",
     "backend": "gulp backend",
     "zip": "gulp zip",
-    "code": "editorconfig-checker"
+    "code": "editorconfig-checker",
+    "deploy": "npm run build && gh-pages -d app"
   },
   "author": "MaxGraph",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "editorconfig-checker": "^4.0.1",
+    "gh-pages": "^4.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-avif": "^1.0.1",
